security implementation and commodities